# testbed_micropython_reports

./: .env.example  .env_localhost  .env_reports-octoprobe-org  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_rebuild_start.sh  pyproject.toml  run_update_certificates.sh  testbed_micropython_reports.code-workspace  zulup_backup.json  zulux_chmod.json
app/: constants.py  main.py  parse_logfile.html  parse_logfile_all.html  render_ansii_color.py  render_directory.py  render_directory_style.py  render_log.css  render_log.py  render_markdown.py  start_uvicorn.sh  util_celery_tasks.py  util_context.py  util_github.py  util_github2.py  util_github_mockdata.py  util_html.py  util_logging.json  util_logging.py  util_path_replace.py  util_validate.py  util_webhooks.py
app/celery_tasks/: tasks.py
app/static/: browse.css  styles.css
app/support/: .gitconfig  redis.conf  start_uvicorn.sh
app/templates/: base.html  browse.html  index.html  jobs.html  jobs_pr.html  next_jobs.html  purge_expired_reports.html  reports.html  webhooks.html
debug/: query_errors.py
experiments/pr-webhooks/: 2026-06-08_15-28-35+0000-ping-ping-000000.json  2026-06-08_15-28-55+0000-pull_request-opened-000001.json  2026-06-08_15-29-10+0000-pull_request-synchronize-000001.json  README-chatgpt.md
kibana_docker/: README.md
kibana_docker/elastic-start-local/: docker-compose.yml  start.sh  uninstall.sh
server/: requirements.txt
server/app/: main.py  parse_logfile copy.html  parse_logfile_all.html  render_ansii_color.py  render_directory.py  render_log.py  render_markdown.py  util_context.py  util_html.py  util_path_replace.py
server/app/static/: README_icons.md
server/app/templates/: index.html
tests/: test_path_replace.py  test_sample.py
tests/gh/: test_list_workflows.py
tests/webhooks/: test_job.py  test_webhooks.py
tests/webhooks/files_pr19290/: 2026-06-09_04-26-12+0000-pull_request-labeled-019290.json  2026-06-09_09-22-35+0000-pull_request-synchronize-019290.json  2026-06-09_09-32-49+0000-pull_request-synchronize-019290.json  2026-06-09_09-38-22+0000-pull_request-synchronize-019290.json  2026-06-09_09-44-30+0000-pull_request-synchronize-019290.json  2026-06-09_09-51-08+0000-pull_request-synchronize-019290.json  2026-06-09_10-07-50+0000-pull_request-review_requested-019290.json  2026-06-12_06-58-11+0000-pull_request-synchronize-019290.json  2026-06-12_07-04-53+0000-pull_request-closed-019290.json
tests/webhooks/files_pr19349/: 2026-06-16_12-59-29+0000-pull_request-opened-019349.json  2026-06-16_16-38-07+0000-pull_request-review_requested-019349.json  2026-06-16_19-00-49+0000-pull_request-synchronize-019349.json  2026-06-17_01-07-54+0000-pull_request-labeled-019349.json  2026-06-17_06-38-14+0000-pull_request-synchronize-019349.json  2026-06-18_14-26-18+0000-pull_request-synchronize-019349.json  2026-06-21_09-54-23+0000-pull_request-synchronize-019349.json  2026-06-21_10-09-45+0000-pull_request-closed-019349.json  2026-06-21_10-09-48+0000-pull_request-reopened-019349.json  2026-06-23_15-04-33+0000-pull_request-synchronize-019349.json  2026-06-25_08-31-30+0000-pull_request-synchronize-019349.json  2026-06-30_08-36-51+0000-pull_request-synchronize-019349.json  2026-07-01_07-12-26+0000-pull_request-synchronize-019349.json  2026-07-02_06-58-08+0000-pull_request-synchronize-019349.json  2026-07-05_12-43-34+0000-pull_request-synchronize-019349.json  2026-07-05_12-53-28+0000-pull_request-synchronize-019349.json  2026-07-06_19-25-58+0000-pull_request-synchronize-019349.json
